--- a/views/shop/cart/cart.ejs
+++ b/views/shop/cart/cart.ejs
@@ -124,21 +124,19 @@
                    </div>
                    <button class="cart-page-footer__product-count clear-btn-style">Chọn tất cả (154)</button><button class="clear-btn-style _1gfXNH">Xóa</button>
                    <div class=""></div>
-                   <button class="clear-btn-style mdaGir">Lưu vào mục Đã thích</button>
                    <div class="cart-page-footer__gap"></div>
                    <div class="_2IDRne">
                       <div class="_1I3_mR">
                          <div class="_1klFI7">
                             <div class="cart-qnt">Tổng thanh toán (0 Sản phẩm):</div>
-                            <div class="cart-price">₫0</div>
+                            <div class="cart-price"> ₫0</div>
                          </div>
                       </div>
                       <div class="_3E49Q_"></div>
                    </div>
                    <div class="cart-page-footer__checkout">
-                       <button class="shopee-button-solid shopee-button-solid--primary" id="checkout-in">
-                           <span class="cart-page-footer__checkout-text">Mua hàng</span>
-                        </button>
+                      
+                        <button class="btn btn-primary" id="checkout-in" style="background: #00bcd4; border-color: unset;">Mua hàng</button>
                     </div>
                 </div>
              </div>
@@ -160,29 +158,7 @@
             </div>
            
             <div class="col-sm-3 clearfix" style="padding-right: 0;">
-                <div class="card-group" style="width: 100%;">
-                    <div class="border_cart" style="width: 100%;">
-                        <table class="table table-inverse" style="width: 100%;">
-                            <tbody>
-                                <tr>
-                                    <th  style="padding-bottom: 20px;">TẠM TÍNH</th>
-                                    <td class="TOTAL" style="float: right;">₫</td>
-                                </tr>
-                                <tr>
-                                    <th>TỔNG TIỀN</th>
-                                    <td class="TOTAL" style="float: right; color: #e61212;">₫</td>
-                                </tr>
-                                <tr>
-                                    <th style="font-size: 16px; color: #8bb9c7;"><small>(Đã bao gồm VAT)</small></th>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div style="width: 100%;">
-                        <a href="/shop/checkout" class="btn btn-danger check-out">THANH TOÁN</a>
-                        <a href="{!! URL::route('link-category', 1) !!}" class="btn btn-primary check-out">TIẾP TỤC MUA SẮM</a>   
-                    </div>
-                </div>
+                
             </div>
           
         </section>
