--- a/public/stylesheets/css/checkout.css
+++ b/public/stylesheets/css/checkout.css
@@ -1248,8 +1248,9 @@ svg:not(:root) {
 }
 .checkout-payment-method-view__current-title {
   font-size: 1.125rem;
-  width: 12.5rem;
+  width: 13rem;
   color: #222;
+  margin-top: 5px;
 }
 .checkout-payment-setting .product-variation {
   font-weight: 500;
