--- a/views/partials/header_seller.ejs
+++ b/views/partials/header_seller.ejs
@@ -175,7 +175,7 @@
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#report">
                       <span class="fas fa-file-medical-alt fa-1x"></span>
-                      <label class="panel-title-label">&ensp;Thống Kê/Báo Cáo</label>
+                      <label class="panel-title-label">&ensp;Tài chính</label>
                     </a>
                 </h4>
             </div>
@@ -184,12 +184,12 @@
                     <table class="table">
                         <tr>
                             <td>
-                                <span class="fas fa-list text-danger"></span><a href="/admin/report/income">&ensp;Thống Kê Doanh Thu</a>
+                                <span class="fas fa-list text-danger"></span><a href="/seller/finance/income">&ensp;Thống Kê Doanh Thu</a>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <span class="fas fa-list text-danger"></span><a href="/admin/report/inventory">&ensp;Xuất/Nhập Tồn</a>
+                                <span class="fas fa-list text-danger"></span><a href="/seller/finance/wallet">&ensp;Wallet</a>
                             </td>
                         </tr>
                     </table>
